<resources>
    <string name="app_name">TravelAI</string>
    <string name="google_map_api_key">AIzaSyDQpnC9Glf5BrasCM0MiZ2OIz8EwKoPGvo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="search_recently">Recently Searched</string>
    <string name="search_top_destination">Top Destinations</string>
    <string name="plan_build_plan_btn">Set your own time</string>
    <string name="plan_build_plan_title">Where do you want to go?</string>
    <string name="search">Search</string>
    <string name="plan_build_plan_time">How much free time
do you have?</string>
    <string name="plan_build_plan_select">Select activities</string>
    <string name="txt_continue">Continue</string>

    <string name="select_budget">Select your budget</string>
    <string name="from">From</string>
    <string name="txt_about">About</string>
    <string name="example_text">The Qafqaz Tufandag Hotel welcomes you
with its charming nature, Eastern hospitality
and lovely atmosphere. The hotel is located
at the foot of the Caucasus mountains, on the
bank of the River Demiraparanchay. You will
enjoy the lap of nature with dazzling beauty
of emerald green forests and spectacular
snowcapped mountains. The distance
between the city centre of Baku and the hotel
is 225 km and 20 km from the Qabala
international airport.</string>
    <string name="reserve">Reserve now</string>

    <string name="whos_coming">Who’s coming with you</string>
    <string name="solo">Solo</string>
    <string name="partner">Partner</string>
    <string name="friend">Friend</string>
    <string name="family">Family</string>
    <string name="txt_with_ai">With AI</string>
    <string name="create_plan_ai">Craft your vision:
Planning your dream,
one step at a time.</string>
    
    <string name="btn_build_plan">Build plan</string>
    <string name="create_plan_own">Build your plan
by your own</string>
</resources>