<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:id="@+id/cardView"
    android:layout_height="220dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:backgroundTint="@color/primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtWithAi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/txt_with_ai"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/create_plan_ai"
            android:textSize="16sp"
            app:layout_goneMarginTop="45dp"
            app:layout_goneMarginStart="32dp"

            android:textColor="@color/secondary"
            app:layout_constraintEnd_toStartOf="@+id/imgLeft"
            app:layout_constraintStart_toStartOf="@+id/txtWithAi"
            app:layout_constraintTop_toBottomOf="@+id/txtWithAi" />

        <ImageView
            android:id="@+id/imgLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:srcCompat="@drawable/iphone_screen1" />

        <ImageView
            android:id="@+id/imgRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="-10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/iphone_screen2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_button"
            android:text="@string/btn_build_plan"
            android:textAllCaps="false"
            android:paddingHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtDescription"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>